# CMake_Template

./: .clang-format  CMakeLists.txt  Dockerfile  main.cpp
cmake/: Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake
include/project/Core/: core.hpp
src/: main.cpp
src/project/: tmp.cpp
src/project/Core/: core.cpp
test/: CMakeLists.txt
test/src/Core/: core_test.cpp
